--- a/src/style.scss
+++ b/src/style.scss
@@ -1,14 +1,32 @@
 .container {
-    margin: auto;
-    text-align: center;
+    margin:0 auto;
     max-width: 600px;
-
-    &__image {
-        width: 100px;
-        height: auto;
-    }
 }
 
 .left {
     text-align: left;
+}
+body{
+	background: #f5f5f5;
+}
+.book{
+	background: #fff;
+    padding: 10px;
+    border: 2px solid #d2d2d2;
+    margin-bottom: 10px;
+}
+.thumbBook,.infoWrap{
+	display: inline-block;
+	vertical-align: top;
+	padding: 15px;
+}
+.editBook{
+	margin-bottom: 10px;
+}
+.btn{
+	vertical-align: top;
+	margin-right: 10px;
+}
+.help-block {
+    color: red;
 }
